--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-matplotlib
-more-itertools
-numpy
-scipy
-sounddevice
-flask
-Jinja2
-MarkupSafe
-Werkzeug
+Flask==1.1.1
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+matplotlib==3.1.3
+more-itertools==8.2.0
+numpy==1.18.1
+PyAudio==0.2.11
+scipy==1.4.1
+sounddevice==0.4.1
+Werkzeug==1.0.0
